[gd_scene load_steps=20 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Prey.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PreyFSM.gd" type="Script" id=3]
[ext_resource path="res://Assets/Player Assets/deer/deer8.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player Assets/deer/deer4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player Assets/deer/deer5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player Assets/deer/deer6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player Assets/deer/deer7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player Assets/deer/deer2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player Assets/deer/deer3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player Assets/deer/deer1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player Assets/deer/jump2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player Assets/deer/jump3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player Assets/deer/jump1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player Assets/deer/deer9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player Assets/deer/fall1.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[node name="Prey" type="KinematicBody2D" groups=["prey"]]
modulate = Color( 0.588235, 0.521569, 0.286275, 1 )
collision_layer = 16
script = ExtResource( 2 )
speed = 400
gravity = 4000

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="jumpCast" type="RayCast2D" parent="."]
position = Vector2( 28, 13 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 64
collide_with_areas = true

[node name="PreyFSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetector"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 13, -11 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )
animation = "fall"
playing = true
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
